@@ -1,5 +1,5 @@
 /*
- * $Id: wxt_gui.cpp,v 1.41 2007/04/30 12:56:08 tlecomte Exp $
+ * $Id: wxt_gui.cpp,v 1.42 2007/05/05 18:59:00 tlecomte Exp $
  */
 
 /* GNUPLOT - wxt_gui.cpp */
@@ -178,8 +178,10 @@ void *wxtThread::Entry()
 	FPRINTF((stderr,"gui_thread_entry\n"));
 
 	/* don't answer to SIGINT in this thread - avoids LONGJMP problems */
-	sigset_t set[1] = {SIGINT};
-	pthread_sigmask(SIG_BLOCK,set,NULL);
+	sigset_t set;
+	sigemptyset(&set);
+	sigaddset(&set, SIGINT);
+	pthread_sigmask(SIG_BLOCK, &set, NULL);
 
 	/* gui loop */
 	wxTheApp->OnRun();
